Add create_lmdb.sh and update train_image_classifer.ipynb

--- a/training/train_image_classifier.ipynb
+++ b/training/train_image_classifier.ipynb
@@ -17,22 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries\n",
     "import os\n",
-    "import pickle\n",
-    "import csv\n",
-    "import cv2\n",
+    "import caffe\n",
+    "from caffe.proto import caffe_pb2\n",
+    "import lmdb\n",
     "import numpy as np\n",
+    "import cv2\n",
     "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
-    "%matplotlib inline\n",
-    "from sklearn.utils import shuffle"
+    "from sklearn.utils import shuffle\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -45,27 +46,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load pickled data\n",
-    "\n",
-    "data_path = \"data/\"\n",
-    "training_file = data_path + \"train.p\"\n",
-    "validation_file= data_path + \"valid.p\"\n",
-    "testing_file = data_path + \"test.p\"\n",
-    "\n",
-    "with open(training_file, mode='rb') as f:\n",
-    "    train = pickle.load(f)\n",
-    "with open(validation_file, mode='rb') as f:\n",
-    "    valid = pickle.load(f)\n",
-    "with open(testing_file, mode='rb') as f:\n",
-    "    test = pickle.load(f)\n",
+    "def load_lmdb(lmdb_data):\n",
+    "    lmdb_env = lmdb.open(lmdb_data)\n",
+    "    lmdb_txn = lmdb_env.begin()\n",
+    "    lmdb_cursor = lmdb_txn.cursor()\n",
+    "    datum = caffe_pb2.Datum()\n",
     "    \n",
-    "X_train, y_train = train['features'], train['labels']\n",
-    "X_valid, y_valid = valid['features'], valid['labels']\n",
-    "X_test, y_test = test['features'], test['labels']"
+    "    X = []\n",
+    "    y = []\n",
+    "    \n",
+    "    for key, value in lmdb_cursor:\n",
+    "        datum.ParseFromString(value)\n",
+    "        label = datum.label\n",
+    "        data = caffe.io.datum_to_array(datum)\n",
+    "    \n",
+    "        #CxHxW to HxWxC in cv2\n",
+    "        image = np.transpose(data, (1,2,0))\n",
+    "        X.append(image)\n",
+    "        y.append(label)\n",
+    "        \n",
+    "    lmdb_env.close()\n",
+    "    return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load lmdb data\n",
+    "\n",
+    "data_path = \"../lmdb/\"\n",
+    "train_file = data_path + \"train_lmdb/\"\n",
+    "valid_file= data_path + \"val_lmdb/\"\n",
+    "test_file = data_path + \"test_lmdb/\"\n",
+    "\n",
+    "X_train, y_train = load_lmdb(train_file)\n",
+    "X_valid, y_valid = load_lmdb(valid_file)\n",
+    "X_test, y_test = load_lmdb(test_file)\n",
+    "n_classes = 10"
    ]
   },
   {
@@ -86,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_pickled(X):\n",
+    "def preprocess_image(X):\n",
     "    # Convert to grayscale\n",
-    "    n = X.shape[0]\n",
+    "    n = np.shape(X)[0]\n",
     "    gray = []\n",
     "    for i in range(0, n):\n",
     "        gray.append(cv2.cvtColor(X[i], cv2.COLOR_RGB2GRAY))\n",
@@ -100,7 +124,7 @@
     "    # Normalize the data\n",
     "    normal = []\n",
     "    for i in range(0, n):\n",
-    "        one_channel = np.zeros((32, 32, 1), np.float)\n",
+    "        one_channel = np.zeros((16, 16, 1), np.float)\n",
     "        one_channel[:,:,0] = ((gray[i].astype(np.float) - 128) / 128) \n",
     "        normal.append(one_channel)\n",
     "        \n",
@@ -109,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = preprocess_pickled(X_train)\n",
-    "X_valid = preprocess_pickled(X_valid)\n",
-    "X_test = preprocess_pickled(X_test)"
+    "X_train = preprocess_image(X_train)\n",
+    "X_valid = preprocess_image(X_valid)\n",
+    "X_test = preprocess_image(X_test)"
    ]
   },
   {
@@ -127,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,40 +160,37 @@
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
-    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 1, 6), mean = mu, stddev = sigma))\n",
+    "    # Layer 1: Convolutional. Input = 16x16x1. Output = 14x14x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 1, 6), mean = mu, stddev = sigma))\n",
     "    conv1_b = tf.Variable(tf.zeros(6))\n",
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
     "    # Activation.\n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "\n",
-    "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
-    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
-    "\n",
-    "    # Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    # Layer 2: Convolutional. Input = 14x14x6. Output = 12x12x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 6, 16), mean = mu, stddev = sigma))\n",
     "    conv2_b = tf.Variable(tf.zeros(16))\n",
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
     "    # Activation.\n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "\n",
-    "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    # Pooling. Input = 12x12x16. Output = 6x6x16.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # Flatten. Input = 6x6x16. Output = 576.\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
-    "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
-    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    # Layer 3: Fully Connected. Input = 576. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(576, 120), mean = mu, stddev = sigma))\n",
     "    fc1_b = tf.Variable(tf.zeros(120))\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
     "    # Activation.\n",
     "    fc1    = tf.nn.relu(fc1)\n",
     "\n",
-    "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    # Layer 4: Fully Connected. Input = 4. Output = .\n",
     "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
     "    fc2_b  = tf.Variable(tf.zeros(84))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
@@ -197,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
+    "x = tf.placeholder(tf.float32, (None, 16, 16, 1))\n",
     "y = tf.placeholder(tf.int32, (None))\n",
     "one_hot_y = tf.one_hot(y, n_classes)\n",
     "keep_prob = tf.placeholder(tf.float32)"
@@ -217,9 +238,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/contrib/layers/python/layers/layers.py:1634: flatten (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use keras.layers.flatten instead.\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/layers/core.py:332: Layer.apply (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `layer.__call__` method instead.\n",
+      "WARNING:tensorflow:From <ipython-input-6-7380d7f43e8d>:43: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "WARNING:tensorflow:From <ipython-input-8-cc1927ca5975>:4: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rate = 0.001\n",
     "\n",
@@ -240,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +324,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.702\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.871\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.898\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.931\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.944\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.942\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.957\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.958\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.951\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.960\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.963\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.963\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.965\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.965\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.966\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.967\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.968\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.967\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "EPOCHS = 20\n",
     "BATCH_SIZE = 128\n",
@@ -320,12 +435,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./model\n",
+      "Train Accuracy = 0.993\n",
+      "valid_accuracy = 0.972\n",
+      "Test Accuracy = 0.968\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
-    "    saver.restore(sess, tf.train.latest_checkpoint('./model'))\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('./'))\n",
     "\n",
     "    train_accuracy = evaluate(X_train, y_train)\n",
     "    valid_accuracy = evaluate(X_valid, y_valid)\n",
