Add train_image_classifier.ipynb and fix Keras version compatible to tensorflow 1.15

--- a/training/train_image_classifier.ipynb
+++ b/training/train_image_classifier.ipynb
@@ -124,7 +124,7 @@
     "    # Normalize the data\n",
     "    normal = []\n",
     "    for i in range(0, n):\n",
-    "        one_channel = np.zeros((16, 16, 1), np.float)\n",
+    "        one_channel = np.zeros((32, 32, 1), np.float)\n",
     "        one_channel[:,:,0] = ((gray[i].astype(np.float) - 128) / 128) \n",
     "        normal.append(one_channel)\n",
     "        \n",
@@ -155,42 +155,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Define your architecture here.\n",
+    "from tensorflow.contrib.layers import flatten\n",
+    "\n",
     "def LeNet(x):    \n",
     "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
-    "    # Layer 1: Convolutional. Input = 16x16x1. Output = 14x14x6.\n",
-    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 1, 6), mean = mu, stddev = sigma))\n",
+    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 1, 6), mean = mu, stddev = sigma))\n",
     "    conv1_b = tf.Variable(tf.zeros(6))\n",
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
     "    # Activation.\n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "\n",
-    "    # Layer 2: Convolutional. Input = 14x14x6. Output = 12x12x16.\n",
-    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 6, 16), mean = mu, stddev = sigma))\n",
+    "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
     "    conv2_b = tf.Variable(tf.zeros(16))\n",
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
     "    # Activation.\n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "\n",
-    "    # Pooling. Input = 12x12x16. Output = 6x6x16.\n",
+    "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # Flatten. Input = 6x6x16. Output = 576.\n",
+    "    # Flatten. Input = 5x5x16. Output = 400.\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
-    "    # Layer 3: Fully Connected. Input = 576. Output = 120.\n",
-    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(576, 120), mean = mu, stddev = sigma))\n",
+    "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
     "    fc1_b = tf.Variable(tf.zeros(120))\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
     "    # Activation.\n",
     "    fc1    = tf.nn.relu(fc1)\n",
     "\n",
-    "    # Layer 4: Fully Connected. Input = 4. Output = .\n",
+    "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
     "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
     "    fc2_b  = tf.Variable(tf.zeros(84))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
@@ -222,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = tf.placeholder(tf.float32, (None, 16, 16, 1))\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
     "y = tf.placeholder(tf.int32, (None))\n",
     "one_hot_y = tf.one_hot(y, n_classes)\n",
     "keep_prob = tf.placeholder(tf.float32)"
@@ -251,7 +257,7 @@
       "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/layers/core.py:332: Layer.apply (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use `layer.__call__` method instead.\n",
-      "WARNING:tensorflow:From <ipython-input-6-7380d7f43e8d>:43: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-6-553c1b73a376>:49: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
       "WARNING:tensorflow:From <ipython-input-8-cc1927ca5975>:4: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
@@ -334,64 +340,64 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.702\n",
+      "Validation Accuracy = 0.829\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.871\n",
+      "Validation Accuracy = 0.915\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.898\n",
-      "\n",
-      "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.931\n",
-      "\n",
-      "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.944\n",
-      "\n",
-      "EPOCH 6 ...\n",
       "Validation Accuracy = 0.942\n",
       "\n",
-      "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.957\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.949\n",
       "\n",
-      "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.958\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.953\n",
       "\n",
-      "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.951\n",
-      "\n",
-      "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.960\n",
-      "\n",
-      "EPOCH 11 ...\n",
-      "Validation Accuracy = 0.963\n",
-      "\n",
-      "EPOCH 12 ...\n",
-      "Validation Accuracy = 0.963\n",
-      "\n",
-      "EPOCH 13 ...\n",
-      "Validation Accuracy = 0.965\n",
-      "\n",
-      "EPOCH 14 ...\n",
-      "Validation Accuracy = 0.965\n",
-      "\n",
-      "EPOCH 15 ...\n",
-      "Validation Accuracy = 0.972\n",
-      "\n",
-      "EPOCH 16 ...\n",
+      "EPOCH 6 ...\n",
       "Validation Accuracy = 0.966\n",
       "\n",
-      "EPOCH 17 ...\n",
+      "EPOCH 7 ...\n",
       "Validation Accuracy = 0.967\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.966\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.967\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.965\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.974\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.969\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.971\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.973\n",
       "\n",
       "EPOCH 18 ...\n",
-      "Validation Accuracy = 0.968\n",
+      "Validation Accuracy = 0.969\n",
       "\n",
       "EPOCH 19 ...\n",
-      "Validation Accuracy = 0.967\n",
+      "Validation Accuracy = 0.977\n",
       "\n",
       "EPOCH 20 ...\n",
-      "Validation Accuracy = 0.972\n",
+      "Validation Accuracy = 0.976\n",
       "\n",
       "Model saved\n"
      ]
@@ -443,9 +449,9 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from ./model\n",
-      "Train Accuracy = 0.993\n",
-      "valid_accuracy = 0.972\n",
-      "Test Accuracy = 0.968\n"
+      "Train Accuracy = 0.998\n",
+      "valid_accuracy = 0.976\n",
+      "Test Accuracy = 0.976\n"
      ]
     }
    ],
